ctckplatform-solution/k8s-ingress-nginx/demoapp/yamltest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2020-10-19T09:17:41.0000000Z
  generation: "1"
  labels:
    app: ctcodepipelineadm-inner-1.0.0.20101936
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector:
          f:matchLabels:
            .: {}
            f:app: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:containers:
              k:{"name":"ctcodepipelineadm"}:
                .: {}
                f:image: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":80,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:protocol: {}
                f:resources:
                  .: {}
                  f:limits:
                    .: {}
                    f:cpu: {}
                    f:memory: {}
                  f:requests:
                    .: {}
                    f:cpu: {}
                    f:memory: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: FxVersion
    operation: Update
    time: 2020-10-19T09:17:41.0000000Z
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    time: 2020-10-19T09:17:49.0000000Z
  name: ctcodepipelineadm-inner-1-0-0-20101936
  namespace: default
  resourceVersion: "47001"
  selfLink: /apis/apps/v1/namespaces/default/deployments/ctcodepipelineadm-inner-1-0-0-20101936
  uid: df83db90-bd66-405d-b2fc-c9bf645feb4f
spec:
  progressDeadlineSeconds: "600"
  replicas: "1"
  revisionHistoryLimit: "5"
  selector:
    matchLabels:
      app: ctcodepipelineadm-inner-1.0.0.20101936
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: ctcodepipelineadm-inner-1.0.0.20101936
    spec:
      containers:
      - image: dockerhub.uc108.org/backend/web_ctcodepipelineadm_inner:1.0.0.20101936
        imagePullPolicy: IfNotPresent
        name: ctcodepipelineadm
        ports:
        - containerPort: "80"
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: Default
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: "30"
status:
  availableReplicas: "1"
  conditions:
  - lastTransitionTime: 2020-10-19T09:17:49.0000000Z
    lastUpdateTime: 2020-10-19T09:17:49.0000000Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: True
    type: Available
  - lastTransitionTime: 2020-10-19T09:17:41.0000000Z
    lastUpdateTime: 2020-10-19T09:17:49.0000000Z
    message: ReplicaSet "ctcodepipelineadm-inner-1-0-0-20101936-666ff44966" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: True
    type: Progressing
  observedGeneration: "1"
  readyReplicas: "1"
  replicas: "1"
  updatedReplicas: "1"
